--- a/CD.yml
+++ b/CD.yml
@@ -1,6 +1,6 @@
 env:
-  repo:         "https://github.com/yaska258/nodejs.git"
-  app_version:  "4.0.0"
+  repo:         "https://github.com/farrukh90/nodejs"
+  app_version:  "3.0.0"
   project_id:   "terraform-project-ciilbadana"
   repo_region:  "us-central1"
   app_name:     "nodejs"
