--- a/environments/dev/values.yaml
+++ b/environments/dev/values.yaml
@@ -15,11 +15,11 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
     acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: dev.yasminey.com
+    - host: devnodejs.yasminey.com
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: 
    - secretName: nodejs-dev-tls
      hosts:
-       - dev.yasminey.com
+       - devnodejs.yasminey.com
