--- a/environments/qa/values.yaml
+++ b/environments/qa/values.yaml
@@ -15,11 +15,11 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
     acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: qa.yasminey.com
+    - host: qanodejs.yasminey.com
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: 
    - secretName: nodejs-qa-tls
      hosts:
-       - qa.yasminey.com
+       - qanodejs.yasminey.com
