--- a/environments/stage/values.yaml
+++ b/environments/stage/values.yaml
@@ -15,11 +15,11 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
     acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: stage.yasminey.com
+    - host: stagenodejs.yasminey.com
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: 
    - secretName: nodejs-stage-tls
      hosts:
-       - stage.yasminey.com
+       - stagenodejs.yasminey.com
